[project]
name = "aiotus"
# The version is provided by 'setuptools_scm', that creates a version
# string from the last tag and the number of commits since then. This
# is used so that uploads to test.pypi.org have unique version strings.
dynamic = ["version"]
authors = [
    {name="Jens Steinhauser", email="jens.steinhauser@gmail.com"},
]
description = "Asynchronous tus (tus.io) client library"
readme = "README.md"
license = {text = "Apache-2.0"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "tenacity>=6.2.0",
]

[dependency-groups]
dev = [
    "aiohttp==3.13.2",
    "build==1.3.0",
    "bump2version==1.0.1",
    "coverage[toml]==7.11.1",
    "mypy==1.18.2",
    "pycodestyle==2.14.0",
    "pydoclint==0.8.1",
    "pytest-aiohttp==1.1.0",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "pytest==8.4.2",
    "pyupgrade==3.21.0",
    "ruff==0.14.4",
    "Sphinx==8.2.3; python_version>'3.10'",
    "sphinx-autodoc-typehints==3.1.0; python_version>'3.10'",
    "tenacity==9.1.2",
    "zizmor==1.16.3",
]

[project.urls]
"Homepage" = "https://github.com/JenSte/aiotus"
"Documentation" = "https://aiotus.readthedocs.io"

[tool.pydoclint]
style = "sphinx"
quiet = true
allow-init-docstring = true
# Do not check/require type hints in the docstring, this is
# done separaretly by the type checker.
arg-type-hints-in-docstring = false
check-return-types = false

[tool.ruff.lint]
select=["ALL"]
ignore = [
    # This rule collides with the formatter.
    "COM812",
    # Collides with D211.
    "D203",
    # Collides with D212.
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ASYNC230", "D", "PLR2004", "PTH", "S101", "SLF001"]

[tool.setuptools]
packages = ["aiotus"]

[tool.setuptools.package-data]
aiotus = ["py.typed"]

[build-system]
requires = [
    "setuptools_scm[toml]",
]

[tool.coverage.run]
branch = true
relative_files = true
omit = ["aiotus/__main__.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = 1
log_cli_level = "INFO"

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.tox]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
allowlist_externals = ["make"]
commands = [["make"]]
dependency_groups = ["dev"]
set_env = { COVERAGE_FILE = ".coverage.{envname}" }
use_develop = true
